# rust-multi-target

./: .gitignore  .gitmodules  README.md
.github/workflows/: actions.yml
ffi/python/: example.py
ffi/rust/keriox_wrapper/: Cargo.toml
ffi/rust/keriox_wrapper/src/: glue.rs.in
flapigen/python/: test.py
flapigen/rust/keriox_wrapper/: Cargo.toml  build.rs
flapigen/rust/keriox_wrapper/src/: glue.rs.in
jolocom_native_utils/: Cargo.toml
jolocom_native_utils/src/: lib.rs
node/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  prepare-native-pkg.js  prepare-platform-arch-pkg.js  tsconfig.json
node/lib/: addon.native.ts  addon.ts  didcomm.test.ts  index.ts
node/native/: Cargo.toml  package.tmpl.json
node/native/src/: lib.rs
node/tests/: didcomm.test.ts  method.test.ts
react-native/: HolderConfig.json  JolocomCore.podspec  index.d.ts  index.js  index.ts  package.json
react-native/android/: build.gradle
react-native/android/src/main/: AndroidManifest.xml
react-native/android/src/main/java/io/jolocom/jolocomCore/: JolocomCoreModule.java  JolocomCorePackage.java
react-native/android/src/main/java/io/jolocom/nativeUtils/: NativeUtilsModule.java  NativeUtilsPackage.java
react-native/ios/: JolocomCore-Bridging-Header.h  JolocomCore.h  JolocomCore.m  JolocomCore.podspec  JolocomCore.swift  core.h
react-native/ios/JolocomCore.xcodeproj/: project.pbxproj
react-native/ios/JolocomCore.xcworkspace/: contents.xcworkspacedata
react-native/rust/keriox_wrapper/: Cargo.toml
react-native/rust/keriox_wrapper/src/: lib.rs
react-native/rust/keriox_wrapper/src/export/ios/: ret.rs
rust/jolocom_native_utils/: Cargo.toml
rust/jolocom_native_utils/src/: .lib.rs.swo  did_document.rs  didcomm_tests.rs  error.rs  lib.rs  wallet.rs
rust/jolocom_native_utils/src/keri/: mod.rs
rust/jolocom_native_utils/src/wallet/: didcomm.rs  mod.rs
rust/signer/: Cargo.toml
rust/signer/src/: lib.rs
rust/signer/src/event_message/: mod.rs
scripts/: build-mobile.sh  build-python.sh  build-wasm.sh  build.sh  variables.sh
scripts/actions/: install-sccache.ps1
