[package]
name = "jolocom_native_utils"
version = "0.1.0"
authors = ["Jolocom"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
de_cent = { path = "../de-cent/sdk-core/" }
libsqlite3-sys = { version = "0.20", features = ["bundled"]}
serde = "1.0"
serde_json = "1.0"
base64 = "0.12"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.1"
