[package]
name = "native-utils"
version = "0.1.0"
authors = ["Charles Cunningham <c.a.cunningham6@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "native_utils"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
serde_json = "1.0"
neon = "0.7"
jolocom_native_utils = { path = "../../rust/jolocom_native_utils" }
