[package]
name = "jolocom_native_utils"
version = "0.1.0"
authors = ["Jolocom"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
keri = "0.1"
universal_wallet = {path = "../../../wallet-rs"}
serde = "1.0"
serde_json = "1.0"
base64 = "0.12"
