[package]
name = "jolocom_native_utils"
version = "0.1.0"
authors = ["Jolocom"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
keri = { git = "https://github.com/35359595/keriox", branch = "ursa_bump", version = "0.3.1" }
universal_wallet = {git = "https://github.com/35359595/wallet-rs", branch = "master"}
serde = "1.0"
serde_json = "1.0"
base64 = "0.12"
thiserror = "1.0"