[package]
name = "keriox_wrapper"
version = "0.1.0"
authors = ["Decentralized Identity Foundation"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keriox_wrapper"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jolocom_native_utils = { path = "../../../rust/jolocom_native_utils" }
cpython = { version = "0.3", features = ["extension-module"] }

[build-dependencies]
flapigen = "0.6.0-pre7"
