[package]
name = "keriox_wrapper"
version = "0.1.0"
authors = ["Decentralized Identity Foundation"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keriox_wrapper"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jolocom_native_utils = { path = "../../../rust/jolocom_native_utils" }
cpython = { version = "0.3", features = ["extension-module"] }

[build-dependencies]
env_logger = "0.7"
log = "0.4.6"
flapigen = "0.6.0-pre7"
