[package]
name = "keriox-wrapper"
version = "0.1.0"
authors = ["Decentralized Identity Foundation"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["console_error_panic_hook", "jni"]

[dependencies]
jolocom_native_utils = { path = "../../../rust/jolocom_native_utils" }
jni = { version = "0.16.0", optional = true }
ffi-support = "0.4"
libc = "0.2"
anyhow="1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
